# raven

./: .gitignore  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  README.md  index.html  package.json  playwright.config.ts  pnpm-lock.yaml  release-please-config.json  vite.config.ts
.github/: dependabot.yml  labels.yml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md
.github/workflows/: ci.yml  release-please.yml
docs/: ARCHITECTURE.md
docs/branding/: README.md
scripts/: tauri-build.mjs  verify-release-config.mjs  verify.sh
src/: vite-env.d.ts
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: agent_auth.rs  agent_task.rs  approval.rs  approval_grants.rs  autonomy.rs  builder_agent.rs  capabilities.rs  capability_registry.rs  content_tools.rs  csv_prompt.rs  db.rs  execution.rs  http_probe.rs  lib.rs  llm.rs  llm_provider.rs  local_tools.rs  models.rs  news.rs  plugins.rs  preflight.rs  providers.rs  runtime.rs  scheduler.rs  seo_tools.rs  services.rs  stream.rs  test_server.rs  tool_discovery.rs  tray.rs  weather.rs  web_tools.rs  workflow.rs
src-tauri/src/planner/: extract.rs  map.rs  mod.rs  operations.rs  render.rs  verify.rs
src-tauri/tests/fixtures/plugins/deterministic-artifact-plugin/: manifest.json
src/app/: App.test.tsx  App.tsx  CommandPalette.tsx  SetupWizard.tsx  aurora.css  nativeIntegrations.ts  tauriBridge.test.ts  tauriBridge.ts
src/domain/: capabilityRegistry.ts  format.test.ts  format.ts  templates.test.ts  templates.ts  types.ts  workflow.test.ts  (+1 more)
(+63 files in other folders)
